# perfect-phylogeny-components-graph

./: .gitignore  AlleleColumn.cpp  AlleleColumn.h  CMakeLists.txt  LICENSE  Nucleotide.cpp  README.md  Sequence.h  main.cpp  small_test.fasta
src/: AlleleColumn.cpp  AlleleColumn.h  CMakeLists.txt  Nucleotide.cpp  Nucleotide.h  PerfectPhylogenyGraph.cpp  PerfectPhylogenyGraph.h  PhylogenyHelpers.h  Sequence.cpp  main.cpp  small_test.fasta
tests/: AlleleColumnTest.cpp  CMakeLists.txt  IsPerfectPhylogenyPair.cpp  PerfectPhylogenyGraphTest.cpp  PerfectPhylogenyTest.cpp  Sample.cpp
